--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,12 +58,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+ assets:
+ - imagem/images.png
   # To add assets to your application, add an assets section, like this:
   # assets:
     #   - images/a_dot_ham.jpeg
   #   - images/a_dot_ham.jpeg
-  assets:
-  - assets/assets/images.png
+  #assets:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
